--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -22,5 +23,8 @@
     "react-icons": "^4.10.1",
     "recharts": "^2.7.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.3.1"
   }
 }
