--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "formik": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +27,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
     "prisma": "^5.3.1"
   }
 }
